# Skuf.VS.Furry

./: .gitignore  CMakeLists.txt
assets/Characters/: HumanSideOtherLeftShotgun.aseprite
include/Core/: Camera.h  Config.h  Game.h  GameTypes.h
include/Entities/: Entity.h  Player.h
include/Managers/: AssetManager.h
include/Systems/: Animation.h  CollisionSystem.h
include/UI/: MainMenu.h
include/World/: Level.h  Tile.h  TileMap.h  TileTypes.h
src/: main.cpp
src/Core/: Camera.cpp  Game.cpp
src/Entities/: Entity.cpp  Player.cpp
src/Managers/: AssetManager.cpp
src/Systems/: Animation.cpp  CollisionSystem.cpp
src/UI/: MainMenu.cpp
src/World/: Level.cpp  Tile.cpp  TileMap.cpp
